--- a/plot_language.ipynb
+++ b/plot_language.ipynb
@@ -136,7 +136,7 @@
     "#cant do df['tokenized_text'] = tokenize(...) because you can't input series into a string parameter. Utilizing apply allows us to get around this and apply it for each row\n",
     "\n",
     "#Use CountVectorizer to get common phrases\n",
-    "vectorizer = CountVectorizer(ngram_range = (1, 4))  #Bigrams and trigrams (how long each phrase can be i.e. 2 and 3)\n",
+    "vectorizer = CountVectorizer(ngram_range = (1, 5))  #Bigrams and trigrams (how long each phrase can be i.e. 2 and 3)\n",
     "X = vectorizer.fit_transform(df['tokenized_text'])\n",
     "\n",
     "#Sum up the counts of each phrase\n",
@@ -146,9 +146,6 @@
     "#Create a DataFrame with phrases and their counts\n",
     "phrase_counts_df = pd.DataFrame({'Phrase': phrases, 'Count': phrase_counts}).sort_values(by='Count', ascending=False).reset_index()\n",
     "phrase_counts_df = phrase_counts_df.drop(['index'], axis = 1)\n",
-    "\n",
-    "\n",
-    "display(phrase_counts_df)\n",
     "\n",
     "phrase_counts_df.to_json('phrase.json')"
    ]
@@ -2328,9 +2325,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8051/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x1fc9b628620>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import plotly.express as px\n",
@@ -2373,8 +2392,6 @@
     "#convert the frequency data to a DataFrame for better visualization\n",
     "word_freq_df = pd.DataFrame(word_freq.items(), columns=['Word', 'Frequency']).sort_values(by='Frequency', ascending=False).reset_index()\n",
     "\n",
-    "display(word_freq_df)\n",
-    "\n",
     "\n",
     "#Define the function to count keyword frequencies\n",
     "def count_keywords(text, keywords):\n",
@@ -2389,25 +2406,25 @@
     "        dbc.Col([\n",
     "            html.H3(\"Keyword Analysis\"), #H2 indicates sub heading with the following properties\n",
     "            dcc.Dropdown(\n",
-    "                id='keyword-dropdown',\n",
-    "                options=[{'label': word, 'value': word} for word in word_freq_df['Word']],\n",
-    "                multi=True,\n",
-    "                placeholder='Select keywords',\n",
-    "                value=['dust', 'debris'],\n",
-    "                style={'width': '100%'}\n",
+    "                id = 'keyword-dropdown',\n",
+    "                options = [{'label': word, 'value': word} for word in word_freq_df['Word']],\n",
+    "                multi = True,\n",
+    "                placeholder = 'Select keywords',\n",
+    "                value = [],\n",
+    "                style = {'width': '100%'}\n",
     "            ),\n",
     "            dbc.Button(\n",
-    "                id='submit-button',\n",
-    "                n_clicks=0,\n",
-    "                children='Submit',\n",
-    "                color='primary',\n",
-    "                style={'margin-top': '10px'}\n",
+    "                id = 'submit-button',\n",
+    "                n_clicks = 0,\n",
+    "                children = 'Submit',\n",
+    "                color = 'primary',\n",
+    "                style = {'margin-top': '10px'}\n",
     "            ),\n",
-    "        ], width='auto'),\n",
-    "    ], justify='left', style={'margin-top': '20px'}),\n",
+    "        ], width = 'auto'),\n",
+    "    ], justify = 'left', style = {'margin-top': '20px'}),\n",
     "    dbc.Row([\n",
     "        dbc.Col([\n",
-    "            dcc.Graph(id='keyword-graph')  # Populate graph based on the dropdown selection\n",
+    "            dcc.Graph(id = 'keyword-graph')  # Populate graph based on the dropdown selection\n",
     "        ]),\n",
     "    ]),\n",
     "])\n",
@@ -2416,7 +2433,7 @@
     "@app.callback(\n",
     "    Output(component_id = 'keyword-graph', component_property = 'figure'),\n",
     "    [Input(component_id = 'submit-button', component_property = 'n_clicks')],\n",
-    "    [dash.dependencies.State('keyword-input', 'value')]\n",
+    "    [dash.dependencies.State('keyword-dropdown', 'value')]\n",
     ")\n",
     "\n",
     "#create function that autosuggests words/phrases?\n",
@@ -2427,21 +2444,12 @@
     "    #want it so that for each click, updates using property of n_clicks and changing the keywords input\n",
     "\n",
     "    #consider the case that exist empty string\n",
-    "    if not keywords.strip():\n",
+    "    if not keywords:\n",
     "        #return empty dict if exist empty string\n",
     "        return {}\n",
     "\n",
-    "    keyword_list = []\n",
-    "    #loop through keywords that are split by ','#\n",
-    "    for kw in keywords.split(','): \n",
-    "        keyword_list.append(kw.strip().lower())\n",
-    "\n",
-    "    #keyword_list = [kw.strip().lower() for kw in keywords.split(',')]\n",
-    "\n",
     "    #apply the function here which applies strip() and lower() while splitting by ','\n",
-    "    df['keyword_frequency'] = df['combined_text'].apply(lambda x: count_keywords(x, keyword_list))\n",
-    "\n",
-    "    display(df['keyword_frequency'])\n",
+    "    df['keyword_frequency'] = df['combined_text'].apply(lambda x: count_keywords(x, keywords))\n",
     "\n",
     "    #convert back to dataframe and fill zero if missing(N/A)\n",
     "    keyword_df = df['keyword_frequency'].apply(pd.Series).fillna(0)\n",
@@ -2472,60 +2480,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8051/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x1fcb50c0620>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import plotly.express as px\n",
+    "from plotly import graph_objects as go\n",
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display\n",
+    "\n",
+    "import numpy as np\n",
+    "import spacy\n",
+    "from collections import Counter\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
     "import dash\n",
     "from dash import dcc, html\n",
     "from dash.dependencies import Input, Output\n",
-    "import dash_bootstrap_components as dbc\n",
-    "import spacy\n",
-    "from collections import Counter\n",
     "\n",
-    "# Load the spaCy model\n",
+    "import dash_bootstrap_components as dbc #used for formatting layout of the dash\n",
+    "\n",
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "\n",
-    "# File path to your Excel file\n",
+    "#File path to your Excel file\n",
     "file_path = 'C:/Users/rgae/OneDrive - QuidelOrtho/Documents/All QuidelFiles/Excel Files/6-21-2024 Copy of CTS.xlsx'\n",
-    "# Read the Excel file and extract necessary columns\n",
-    "df = pd.read_excel(file_path, index_col=None, na_values=['NA'], usecols='AL, BN, BM')\n",
+    "#Read the Excel file and extract necessary columns\n",
+    "df = pd.read_excel(file_path, index_col = None, na_values = ['NA'], usecols = 'AL, BN, BM')\n",
     "\n",
-    "# Use pd to_datetime to utilize in the mapping of the data over time\n",
+    "#use pd to date time to utilize in the mapping of the data over time\n",
     "df['Complete Loc Dt'] = pd.to_datetime(df['Complete Loc Dt'])\n",
-    "# Combine the text columns into a single text column for analysis\n",
+    "#Combine the text columns into a single text column for analysis\n",
     "df['combined_text'] = df.astype(str).agg(' '.join, axis=1)\n",
     "\n",
-    "# Find frequency of text\n",
-    "combined_text = ' '.join(df['combined_text'])\n",
-    "doc = nlp(combined_text)\n",
+    "#Tokenize the text using spaCy and create a list of sentences\n",
+    "def tokenize(text):\n",
+    "    doc = nlp(text.lower())\n",
+    "    return ' '.join([token.text for token in doc]) #https://stackoverflow.com/questions/57187116/how-to-modify-spacy-tokens-doc-doc-tokens-with-pipeline-components-in-spacy\n",
     "\n",
-    "# Extract words and calculate their frequencies\n",
-    "words = [token.text.lower() for token in doc if token.is_alpha]\n",
-    "word_freq = Counter(words)\n",
+    "df['tokenized_text'] = df['combined_text'].apply(tokenize) #call the method above to the combined text column \n",
+    "#cant do df['tokenized_text'] = tokenize(...) because you can't input series into a string parameter. Utilizing apply allows us to get around this and apply it for each row\n",
     "\n",
-    "# Convert the frequency data to a DataFrame for better visualization\n",
-    "word_freq_df = pd.DataFrame(word_freq.items(), columns=['Word', 'Frequency']).sort_values(by='Frequency', ascending=False).reset_index(drop=True)\n",
     "\n",
-    "# Define the function to count keyword frequencies\n",
+    "\n",
+    "#Use CountVectorizer to get common phrases\n",
+    "vectorizer = CountVectorizer(ngram_range = (1, 4))  #Bigrams and trigrams (how long each phrase can be i.e. 2 and 3)\n",
+    "X = vectorizer.fit_transform(df['tokenized_text'])\n",
+    "\n",
+    "#Sum up the counts of each phrase\n",
+    "phrase_counts = X.sum(axis=0).A1\n",
+    "phrases = vectorizer.get_feature_names_out()\n",
+    "\n",
+    "#Create a DataFrame with phrases and their counts\n",
+    "phrase_counts_df = pd.DataFrame({'Phrase': phrases, 'Count': phrase_counts}).sort_values(by = 'Count', ascending = False).reset_index()\n",
+    "phrase_counts_df = phrase_counts_df.drop(['index'], axis = 1)\n",
+    "\n",
+    "\n",
+    "\n",
+    "#Define the function to count keyword frequencies\n",
     "def count_keywords(text, keywords):\n",
     "    text = text.lower()\n",
-    "    return {keyword: 1 if keyword in text else 0 for keyword in keywords}  # Binary values\n",
+    "    return {keyword: 1 if keyword in text else 0 for keyword in keywords} #binary values\n",
+    "#############################\n",
     "\n",
-    "# Initialize app\n",
-    "app = dash.Dash(__name__, external_stylesheets=[dbc.themes.CYBORG])\n",
-    "app.layout = dbc.Container([\n",
-    "    dbc.Row([\n",
+    "#initialize app\n",
+    "app = dash.Dash(__name__, external_stylesheets = [dbc.themes.CYBORG]) \n",
+    "app.layout = dbc.Container([ #dbc rows and col where number of columns and rows are determined by how many rows and columns are in the parameters\n",
+    "    dbc.Row([ #e.g. row(col col col) <-- 3 columns || row (col) <-- 1 column https://dash-bootstrap-components.opensource.faculty.ai/docs/components/layout/\n",
     "        dbc.Col([\n",
-    "            html.H3(\"Keyword Analysis\"),\n",
+    "            html.H3(\"Phrase Analysis\"), #H2 indicates sub heading with the following properties\n",
     "            dcc.Dropdown(\n",
     "                id='keyword-dropdown',\n",
-    "                options=[{'label': word, 'value': word} for word in word_freq_df['Word']],\n",
+    "                options=[{'label': phrase, 'value': phrase} for phrase in phrase_counts_df['Phrase']],\n",
     "                multi=True,\n",
     "                placeholder='Select keywords',\n",
-    "                value=['dust', 'dispense', 'blade', 'debris'],\n",
+    "                value=[],\n",
     "                style={'width': '100%'}\n",
     "            ),\n",
     "            dbc.Button(\n",
@@ -2544,41 +2595,53 @@
     "    ]),\n",
     "])\n",
     "\n",
-    "# Set up a callback function that updates the output based on the input\n",
+    "#set up an callback function that updates the output based on our input\n",
     "@app.callback(\n",
-    "    Output(component_id='keyword-graph', component_property='figure'),\n",
-    "    [Input(component_id='submit-button', component_property='n_clicks')],\n",
+    "    Output(component_id = 'keyword-graph', component_property = 'figure'),\n",
+    "    [Input(component_id = 'submit-button', component_property = 'n_clicks')],\n",
     "    [dash.dependencies.State('keyword-dropdown', 'value')]\n",
     ")\n",
-    "def update_graph(n_clicks, keywords):\n",
-    "    # Consider the case that exist empty string\n",
+    "\n",
+    "#create function that autosuggests words/phrases?\n",
+    "#def word_suggestor\n",
+    "\n",
+    "#create function that updates figure\n",
+    "def update_graph(n_clicks, keywords):  \n",
+    "    #want it so that for each click, updates using property of n_clicks and changing the keywords input\n",
+    "\n",
+    "    #consider the case that exist empty string\n",
     "    if not keywords:\n",
-    "        # Return empty dict if there are no keywords\n",
+    "        #return empty dict if exist empty string\n",
     "        return {}\n",
     "\n",
-    "    # Apply the function here which applies strip() and lower() while splitting by ','\n",
+    "    #apply the function here which applies strip() and lower() while splitting by ','\n",
     "    df['keyword_frequency'] = df['combined_text'].apply(lambda x: count_keywords(x, keywords))\n",
     "\n",
-    "    # Convert back to dataframe and fill zero if missing (N/A)\n",
+    "    #convert back to dataframe and fill zero if missing(N/A)\n",
     "    keyword_df = df['keyword_frequency'].apply(pd.Series).fillna(0)\n",
     "\n",
-    "    # Group by date and reset the index like before\n",
+    "    #group by date and reset the index like before\n",
     "    keyword_bydate_df = df[['Complete Loc Dt']].join(keyword_df).groupby('Complete Loc Dt').sum().reset_index()\n",
-    "    keyword_bydate_df = keyword_bydate_df.melt(id_vars=['Complete Loc Dt'], var_name='Keyword', value_name='Service Calls')\n",
-    "    keyword_bydate_df = keyword_bydate_df.rename(columns={'Complete Loc Dt': 'Date'})\n",
+    "    keyword_bydate_df = keyword_bydate_df.melt(id_vars = ['Complete Loc Dt'], var_name = 'Keyword', value_name = 'Service Calls')\n",
+    "    keyword_bydate_df = keyword_bydate_df.rename(columns = {'Complete Loc Dt': 'Date'})\n",
     "\n",
-    "    # Create the histogram here\n",
-    "    fig = px.histogram(keyword_bydate_df, x='Date', y='Service Calls', color='Keyword', barmode='group', title='Keyword Presence Over Time')\n",
+    "    #create the histogram here\n",
+    "    fig = px.histogram(keyword_bydate_df, x = 'Date', y = 'Service Calls', color = 'Keyword', barmode = 'group', title = 'Phrase Presence Over Time')\n",
     "    fig.update_xaxes(\n",
-    "        dtick=86400000.0 * 14,  # Biweekly\n",
+    "        dtick=86400000.0 * 14 , #biweekly\n",
+    "        #tickformat=\"%b\\n%Y\",\n",
     "        ticklabelmode=\"period\"\n",
     "    )\n",
     "\n",
-    "    # Return the fig\n",
+    "    #return the fig\n",
     "    return fig\n",
+    "    \n",
+    "    \n",
+    "#############################\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    app.run_server(debug=True, port=8051)\n"
+    "    app.run_server(debug = True, port = 8051) #specify port, couldn't terminate port 8050 so work around for now\n",
+    "    "
    ]
   }
  ],
