--- a/plot_language.ipynb
+++ b/plot_language.ipynb
@@ -2326,7 +2326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2344,7 +2344,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2828a9d1c10>"
+       "<IPython.lib.display.IFrame at 0x1ff213948f0>"
       ]
      },
      "metadata": {},
@@ -2403,47 +2403,61 @@
     "#############################\n",
     "\n",
     "#initialize app\n",
-    "app = dash.Dash(__name__, external_stylesheets = [dbc.themes.CYBORG]) \n",
-    "app.layout = dbc.Container([ #dbc rows and col where number of columns and rows are determined by how many rows and columns are in the parameters\n",
-    "    dbc.Row([ #e.g. row(col col col) <-- 3 columns || row (col) <-- 1 column https://dash-bootstrap-components.opensource.faculty.ai/docs/components/layout/\n",
-    "        dbc.Col([\n",
-    "            html.H3(\"Keyword Analysis\"), #H2 indicates sub heading with the following properties\n",
-    "            dcc.Dropdown(\n",
-    "                id = 'keyword-dropdown',\n",
-    "                options = [{'label': f\"{word} ----- {freq}\", 'value': word} for word, freq in zip(word_freq_df['Word'], word_freq_df['Frequency'])],\n",
-    "                multi = True,\n",
-    "                placeholder = 'Select keywords',\n",
-    "                value = [],\n",
-    "                style = {'width': '100%'}\n",
-    "            ),\n",
-    "            dbc.Button(\n",
-    "                id = 'submit-button',\n",
-    "                n_clicks = 0,\n",
-    "                children = 'Submit',\n",
-    "                color = 'primary',\n",
-    "                style = {'margin-top': '10px'}\n",
-    "            ),\n",
-    "        ], width = 'auto'),\n",
-    "    ], justify = 'left', style = {'margin-top': '20px'}),\n",
+    "app = dash.Dash(__name__, external_stylesheets=[dbc.themes.CYBORG])\n",
+    "app.layout = html.Div([  # dbc rows and col where number of columns and rows are determined by how many rows and columns are in the parameters\n",
+    "    dbc.Row(  # e.g. row(col col col) <-- 3 columns || row (col) <-- 1 column https://dash-bootstrap-components.opensource.faculty.ai/docs/components/layout/\n",
+    "        [\n",
+    "            dbc.Col([\n",
+    "                html.H2(\"Keyword Analysis\", style={'font-size': '20px'}),  # H2 indicates sub heading with the following properties\n",
+    "                dcc.Dropdown(\n",
+    "                    id = 'keyword-dropdown',\n",
+    "                    options = [{'label': f\"{word} ----- {freq}\", 'value': word} for word, freq in zip(word_freq_df['Word'], word_freq_df['Frequency'])],\n",
+    "                    multi = True,\n",
+    "                    placeholder = 'Select keywords',\n",
+    "                    value = [],\n",
+    "                    style = {'width': '100%'}\n",
+    "                ),\n",
+    "                dbc.Button(\n",
+    "                    id = 'submit-button',\n",
+    "                    n_clicks = 0,\n",
+    "                    children = 'Submit',\n",
+    "                    color = 'primary',\n",
+    "                    style = {'margin-top': '10px'}\n",
+    "                ),\n",
+    "            ], width = {'size': '10'},\n",
+    "                style = {'font-size': '16px'}),\n",
+    "\n",
+    "            dbc.Col([\n",
+    "                html.H2(\"Toggle Stack\", style={'font-size': '20px'}),\n",
+    "                dcc.Checklist(\n",
+    "                    id = 'toggle-checklist',\n",
+    "                    options = [\n",
+    "                        {'label': 'Grouped', 'value': 'group'},\n",
+    "                    ], value = ['True'],\n",
+    "                    style = {'font-size': '16px'},\n",
+    "                )\n",
+    "            ])\n",
+    "        ], justify = 'between'\n",
+    "    ),\n",
+    "\n",
     "    dbc.Row([\n",
     "        dbc.Col([\n",
-    "            dcc.Graph(id = 'keyword-graph')  # Populate graph based on the dropdown selection\n",
+    "            dcc.Graph(id='keyword-graph')  # Populate graph based on the dropdown selection\n",
     "        ]),\n",
     "    ]),\n",
     "])\n",
     "\n",
+    "\n",
     "#set up an callback function that updates the output based on our input\n",
     "@app.callback(\n",
     "    Output(component_id = 'keyword-graph', component_property = 'figure'),\n",
-    "    [Input(component_id = 'submit-button', component_property = 'n_clicks')],\n",
+    "    [Input(component_id = 'submit-button', component_property = 'n_clicks'),\n",
+    "     Input(component_id = 'toggle-checklist', component_property = 'value')],\n",
     "    [dash.dependencies.State('keyword-dropdown', 'value')]\n",
     ")\n",
     "\n",
-    "#create function that autosuggests words/phrases?\n",
-    "#def word_suggestor\n",
-    "\n",
     "#create function that updates figure\n",
-    "def update_graph(n_clicks, keywords):  \n",
+    "def update_graph(n_clicks, toggle, keywords):  \n",
     "    #want it so that for each click, updates using property of n_clicks and changing the keywords input\n",
     "\n",
     "    #consider the case that exist empty string\n",
@@ -2462,8 +2476,11 @@
     "    keyword_bydate_df = keyword_bydate_df.melt(id_vars=['Complete Loc Dt'], var_name='Keyword', value_name='Service Calls')\n",
     "    keyword_bydate_df = keyword_bydate_df.rename(columns = {'Complete Loc Dt': 'Date'})\n",
     "\n",
+    "    #set the barmode based on the toggle value\n",
+    "    barmode = 'group' if 'group' in toggle else 'stack'\n",
+    "\n",
     "    #create the histogram here\n",
-    "    fig = px.histogram(keyword_bydate_df, x = 'Date', y = 'Service Calls', color = 'Keyword', barmode = 'group', title = 'Keyword Presence Over Time')\n",
+    "    fig = px.histogram(keyword_bydate_df, x = 'Date', y = 'Service Calls', color = 'Keyword', barmode = barmode, title = 'Keyword Presence Over Time')\n",
     "    fig.update_xaxes(\n",
     "        dtick=86400000.0 * 14 , #biweekly\n",
     "        #tickformat=\"%b\\n%Y\",\n",
@@ -2483,7 +2500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2501,7 +2518,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2828dbcca40>"
+       "<IPython.lib.display.IFrame at 0x1ff1f9d97f0>"
       ]
      },
      "metadata": {},
@@ -2572,28 +2589,43 @@
     "#############################\n",
     "\n",
     "#initialize app\n",
-    "app = dash.Dash(__name__, external_stylesheets = [dbc.themes.CYBORG]) \n",
-    "app.layout = dbc.Container([ #dbc rows and col where number of columns and rows are determined by how many rows and columns are in the parameters\n",
-    "    dbc.Row([ #e.g. row(col col col) <-- 3 columns || row (col) <-- 1 column https://dash-bootstrap-components.opensource.faculty.ai/docs/components/layout/\n",
-    "        dbc.Col([\n",
-    "            html.H3(\"Phrase Analysis\"), #H2 indicates sub heading with the following properties\n",
-    "            dcc.Dropdown(\n",
-    "                id='keyword-dropdown',\n",
-    "                options = [{'label': f\"{phrase} ----- {freq}\", 'value': phrase} for phrase, freq in zip(phrase_counts_df['Phrase'], phrase_counts_df['Count'])],\n",
-    "                multi=True,\n",
-    "                placeholder='Select keywords',\n",
-    "                value=[],\n",
-    "                style={'width': '100%'}\n",
-    "            ),\n",
-    "            dbc.Button(\n",
-    "                id='submit-button',\n",
-    "                n_clicks=0,\n",
-    "                children='Submit',\n",
-    "                color='primary',\n",
-    "                style={'margin-top': '10px'}\n",
-    "            ),\n",
-    "        ], width='auto'),\n",
-    "    ], justify='left', style={'margin-top': '20px'}),\n",
+    "app = dash.Dash(__name__, external_stylesheets=[dbc.themes.CYBORG])\n",
+    "app.layout = html.Div([  # dbc rows and col where number of columns and rows are determined by how many rows and columns are in the parameters\n",
+    "    dbc.Row(  # e.g. row(col col col) <-- 3 columns || row (col) <-- 1 column https://dash-bootstrap-components.opensource.faculty.ai/docs/components/layout/\n",
+    "        [\n",
+    "            dbc.Col([\n",
+    "                html.H2(\"Phrase Analysis\", style={'font-size': '20px'}),  # H2 indicates sub heading with the following properties\n",
+    "                dcc.Dropdown(\n",
+    "                    id = 'keyword-dropdown',\n",
+    "                    options = [{'label': f\"{phrase} ----- {freq}\", 'value': phrase} for phrase, freq in zip(phrase_counts_df['Phrase'], phrase_counts_df['Count'])],\n",
+    "                    multi = True,\n",
+    "                    placeholder = 'Select keywords',\n",
+    "                    value = [],\n",
+    "                    style = {'width': '100%'}\n",
+    "                ),\n",
+    "                dbc.Button(\n",
+    "                    id = 'submit-button',\n",
+    "                    n_clicks = 0,\n",
+    "                    children = 'Submit',\n",
+    "                    color = 'primary',\n",
+    "                    style = {'margin-top': '10px'}\n",
+    "                ),\n",
+    "            ], width = {'size': '10'},\n",
+    "                style = {'font-size': '16px'}),\n",
+    "\n",
+    "            dbc.Col([\n",
+    "                html.H2(\"Toggle Stack\", style={'font-size': '20px'}),\n",
+    "                dcc.Checklist(\n",
+    "                    id = 'toggle-checklist',\n",
+    "                    options = [\n",
+    "                        {'label': 'Grouped', 'value': 'group'},\n",
+    "                    ], value = ['True'],\n",
+    "                    style = {'font-size': '16px'},\n",
+    "                )\n",
+    "            ])\n",
+    "        ], justify = 'between'\n",
+    "    ),\n",
+    "\n",
     "    dbc.Row([\n",
     "        dbc.Col([\n",
     "            dcc.Graph(id='keyword-graph')  # Populate graph based on the dropdown selection\n",
@@ -2604,7 +2636,8 @@
     "#set up an callback function that updates the output based on our input\n",
     "@app.callback(\n",
     "    Output(component_id = 'keyword-graph', component_property = 'figure'),\n",
-    "    [Input(component_id = 'submit-button', component_property = 'n_clicks')],\n",
+    "    [Input(component_id = 'submit-button', component_property = 'n_clicks'),\n",
+    "     Input(component_id = 'toggle-checklist', component_property = 'value')],\n",
     "    [dash.dependencies.State('keyword-dropdown', 'value')]\n",
     ")\n",
     "\n",
@@ -2612,7 +2645,7 @@
     "#def word_suggestor\n",
     "\n",
     "#create function that updates figure\n",
-    "def update_graph(n_clicks, keywords):  \n",
+    "def update_graph(n_clicks, toggle, keywords):  \n",
     "    #want it so that for each click, updates using property of n_clicks and changing the keywords input\n",
     "\n",
     "    #consider the case that exist empty string\n",
@@ -2631,8 +2664,12 @@
     "    keyword_bydate_df = keyword_bydate_df.melt(id_vars = ['Complete Loc Dt'], var_name = 'Keyword', value_name = 'Service Calls')\n",
     "    keyword_bydate_df = keyword_bydate_df.rename(columns = {'Complete Loc Dt': 'Date'})\n",
     "\n",
+    "\n",
+    "    #set the barmode based on the toggle value\n",
+    "    barmode = 'group' if 'group' in toggle else 'stack'\n",
+    "\n",
     "    #create the histogram here\n",
-    "    fig = px.histogram(keyword_bydate_df, x = 'Date', y = 'Service Calls', color = 'Keyword', barmode = 'group', title = 'Phrase Presence Over Time')\n",
+    "    fig = px.histogram(keyword_bydate_df, x = 'Date', y = 'Service Calls', color = 'Keyword', barmode = barmode, title = 'Phrase Presence Over Time')\n",
     "    fig.update_xaxes(\n",
     "        dtick=86400000.0 * 14 , #biweekly\n",
     "        #tickformat=\"%b\\n%Y\",\n",
@@ -2763,6 +2800,9 @@
     "                style={'margin-top': '10px'}\n",
     "            ),\n",
     "        ], width='6'),\n",
+    "        dbc.Col([\n",
+    "\n",
+    "        ]),\n",
     "    ], justify='left', style={'margin-top': '20px'}),\n",
     "    dbc.Row([\n",
     "        dbc.Col([\n",
@@ -2800,6 +2840,8 @@
     "    keyword_bydate_df = df[['Incident Close Loc Dt']].join(keyword_df).groupby('Incident Close Loc Dt').sum().reset_index()\n",
     "    keyword_bydate_df = keyword_bydate_df.melt(id_vars = ['Incident Close Loc Dt'], var_name = 'Keyword', value_name = 'Service Calls')\n",
     "    keyword_bydate_df = keyword_bydate_df.rename(columns = {'Incident Close Loc Dt': 'Date'})\n",
+    "\n",
+    "    \n",
     "\n",
     "    #create the histogram here\n",
     "    fig = px.histogram(keyword_bydate_df, x = 'Date', y = 'Service Calls', color = 'Keyword', barmode = 'group', title = 'Phrase Presence Over Time') #toggle button, stack of not stack (BARMODE = VARIABLE)\n",
